--- a/html/Information.html
+++ b/html/Information.html
@@ -10,6 +10,7 @@
   <a href="contact.html">Contact</a>
   <a href="education.html">Education</a>
   <a class="active" href="Information.html">Information</a>
+   <a href="videos.html">GATE Videos</a>
 </div> 
 <br>
 <image src="IIITH.jpeg"> 
