--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,11 @@
 </head>
 <body class="body">
 <div class="topnav">
-   <a class="active" href="#home">Home</a>
+   <a class="active" href="homePage.html">Home</a>
   <a href="contact.html">Contact</a>
   <a href="education.html">Education</a>
-  <a href="Information.html">Information</a>
+  <a  href="Information.html">Information</a>
+   <a href="videos.html">GATE Videos</a>
 </div> 
 <br><br><br>
 <div class="myDiv"><p>
