--- a/html/contact.html
+++ b/html/contact.html
@@ -6,10 +6,11 @@
 </head>
 <body>
 <div class="topnav">
-   <a href="index.html">Home</a>
+   <a href="homePage.html">Home</a>
   <a class="active" href="contact.html">Contact</a>
   <a href="education.html">Education</a>
   <a href="Information.html">Information</a>
+   <a href="videos.html">GATE Videos</a>
 </div> 
  <div class="container">
   <div class="text-block">
