--- a/html/education.html
+++ b/html/education.html
@@ -7,10 +7,11 @@
 
 <body>
 <div class="topnav">
-   <a  href="index.html">Home</a>
+   <a href="homePage.html">Home</a>
   <a href="contact.html">Contact</a>
   <a class="active" href="education.html">Education</a>
-   <a href="Information.html">Information</a>
+  <a  href="Information.html">Information</a>
+   <a href="videos.html">GATE Videos</a>
 </div> 
 <p> These are my education details.</p>
 <div id="school">
