--- a/html/videos.html
+++ b/html/videos.html
@@ -2,6 +2,8 @@
 <HTML>
 <HEAD>
 <TITLE>Videos</TITLE>
+  <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
+<link rel="stylesheet" href="../styles/education.css" type="text/css">
 </HEAD>
 <BODY>
 <DIV>
