--- a/html/videos.html
+++ b/html/videos.html
@@ -6,6 +6,13 @@
 <link rel="stylesheet" href="../styles/education.css" type="text/css">
 </HEAD>
 <BODY>
+  div class="topnav">
+   <a href="homePage.html">Home</a>
+  <a href="contact.html">Contact</a>
+  <a href="education.html">Education</a>
+  <a  href="Information.html">Information</a>
+   <a class="active" href="videos.html">GATE Videos</a>
+</div> 
 <DIV>
 <p>This is the IIIT-H PGEE 2019 Question Paper Solutions Part 1</p>
 <video controls><source src="GATE 2019 Pointers Question.mp4" type="video/mp4"></video>
