--- a/html/videos.html
+++ b/html/videos.html
@@ -3,7 +3,7 @@
 <HEAD>
 <TITLE>Videos</TITLE>
   <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
-<link rel="stylesheet" href="../styles/education.css" type="text/css">
+<link rel="stylesheet" href="../styles/videos.css" type="text/css">
 </HEAD>
 <BODY>
   div class="topnav">
