--- a/html/videos.html
+++ b/html/videos.html
@@ -7,15 +7,23 @@
 </HEAD>
 <BODY>
   div class="topnav">
-   <a href="homePage.html">Home</a>
+   <a href="index.html">Home</a>
   <a href="contact.html">Contact</a>
   <a href="education.html">Education</a>
   <a  href="Information.html">Information</a>
    <a class="active" href="videos.html">GATE Videos</a>
 </div> 
 <DIV>
-<p>This is the IIIT-H PGEE 2019 Question Paper Solutions Part 1</p>
+<p>This is the GATE 2019 Pointers based question</p>
 <video controls><source src="GATE 2019 Pointers Question.mp4" type="video/mp4"></video>
+</DIV>
+  <DIV>
+<p>This is the GATE 2019 C programming based Question</p>
+<video controls><source src="GATE 2019 C Programming Question.mp4" type="video/mp4"></video>
+</DIV>
+  <DIV>
+<p>This is the GATE 2019 C limits based Question</p>
+<video controls><source src="GATE 2019 Limits Question(1).mp4" type="video/mp4"></video>
 </DIV>
 </BODY>
 </HTML>
