--- a/html/videos.html
+++ b/html/videos.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../styles/videos.css" type="text/css">
 </HEAD>
 <BODY>
-  div class="topnav">
+  <div class="topnav">
    <a href="index.html">Home</a>
   <a href="contact.html">Contact</a>
   <a href="education.html">Education</a>
