--- a/html/videos.html
+++ b/html/videos.html
@@ -15,7 +15,7 @@
 </div> 
 <DIV>
 <p>This is the GATE 2019 Pointers based question</p>
-<video width="240 height="320" controls><source src="GATE 2019 Pointers Question.mp4" type="video/mp4"></video>
+<video width="240" height="320" controls><source src="GATE 2019 Pointers Question.mp4" type="video/mp4"></video>
 </DIV>
   <DIV>
 <p>This is the GATE 2019 C programming based Question</p>
