--- a/html/contact.html
+++ b/html/contact.html
@@ -11,6 +11,13 @@
   <a href="education.html">Education</a>
   <a href="Information.html">Information</a>
    <a href="videos.html">GATE Videos</a>
+<div>
+<ol>
+	<li>Codechef</li>
+	<li><img src="codechef.jpg" alt="Codechef" style="width:100%;" alt="Sorry, Image not available">
+		<div class="container"><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</div></li>
+</ol>	
+</div>
 </div> 
  <div class="container">
   <div class="text-block">
