--- a/html/contact.html
+++ b/html/contact.html
@@ -13,9 +13,9 @@
    <a href="videos.html">GATE Videos</a>
 <div>
 <ol>
-	<li>Codechef</li>
-	<li><img src="codechef.jpg" alt="Codechef" style="width:100%;" alt="Sorry, Image not available">
-		<div class="container"><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</div></li>
+	<li><img src="codechef.jpg" alt="Codechef" style="width:50%;" alt="Sorry, Image not available"></li>
+		
+	<li><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</a></li>
 </ol>	
 </div>
 </div> 
