--- a/html/contact.html
+++ b/html/contact.html
@@ -12,25 +12,25 @@
   <a href="Information.html">Information</a>
    <a href="videos.html">GATE Videos</a>
 </div>
-<ol>
-	<li><img src="codechef.jpg" alt="Codechef" style="width:50%;" alt="Sorry, Image not available"></li>
-	<li><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</a></li>
+<table>
+	<tr><td><img src="codechef.jpg" alt="Codechef" style="width:50%;" alt="Sorry, Image not available"></td>
+	<td><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</a></td></tr>
 	
-	<li><img src="leetcode.png" alt="Leetcode" style="width:50%;" alt="Sorry, Image not available"></li>
-	<li><a href="https://leetcode.com/2021201077_husen/" target=_blank>Leetcode</a></li>
+	<tr><td><img src="leetcode.png" alt="Leetcode" style="width:50%;" alt="Sorry, Image not available"></li></td>
+	<td><a href="https://leetcode.com/2021201077_husen/" target=_blank>Leetcode</a><td></tr>
 	
-	<li><img src="codeforces.jpg" alt="Codeforces" style="width:50%;" alt="Sorry, Image not available"></li>
-	<li><a href="https://codeforces.com/profile/Hussain777" target=_blank>Codeforces</a></li>
+	<tr><td><img src="codeforces.jpg" alt="Codeforces" style="width:50%;" alt="Sorry, Image not available"></td>
+	<td><li><a href="https://codeforces.com/profile/Hussain777" target=_blank>Codeforces</a></li></td></tr>
 	
-	<li><img src="atcoder.png" alt="Atcoder" style="width:50%;" alt="Sorry, Image not available"></li>
-	<li><a href="https://atcoder.jp/users/hrk777" target=_blank>Atcoder</a></li>
+	<tr><td><img src="atcoder.png" alt="Atcoder" style="width:50%;" alt="Sorry, Image not available"></td>
+	<td><li><a href="https://atcoder.jp/users/hrk777" target=_blank>Atcoder</a></li></td></tr>
 	
-	<li><img src="Linkedin-Logo.png" alt="LinkedIn" style="width:50%;" alt="Sorry, Image not available"></li>
-	<li><a href="https://www.linkedin.com/in/hussain-kagdi-70941616a/" target=_blank>LinkedIn</a></li>
+	<tr><td><img src="Linkedin-Logo.png" alt="LinkedIn" style="width:50%;" alt="Sorry, Image not available"></td>
+	<td><a href="https://www.linkedin.com/in/hussain-kagdi-70941616a/" target=_blank>LinkedIn</a></li></td></tr>
 	
-	<li><img src="github.png" alt="Github" style="width:50%;" alt="Sorry, Image not available"></li>
-	<li><a href="https://github.com/HRKagdi" target=_blank>Github</a></li>
-</ol>	
+	<tr><td><img src="github.png" alt="Github" style="width:50%;" alt="Sorry, Image not available"></td>
+	<td><a href="https://github.com/HRKagdi" target=_blank>Github</a></td></tr>
+</table>	
 
 </body>
 </html>
