--- a/html/contact.html
+++ b/html/contact.html
@@ -20,13 +20,13 @@
 	<td><a href="https://leetcode.com/2021201077_husen/" target=_blank>Leetcode</a><td></tr>
 	
 	<tr><td><img src="codeforces.jpg" alt="Codeforces" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><li><a href="https://codeforces.com/profile/Hussain777" target=_blank>Codeforces</a></li></td></tr>
+	<td><a href="https://codeforces.com/profile/Hussain777" target=_blank>Codeforces</a></td></tr>
 	
 	<tr><td><img src="atcoder.png" alt="Atcoder" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><li><a href="https://atcoder.jp/users/hrk777" target=_blank>Atcoder</a></li></td></tr>
+	<td><a href="https://atcoder.jp/users/hrk777" target=_blank>Atcoder</a></td></tr>
 	
 	<tr><td><img src="Linkedin-Logo.png" alt="LinkedIn" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><a href="https://www.linkedin.com/in/hussain-kagdi-70941616a/" target=_blank>LinkedIn</a></li></td></tr>
+	<td><a href="https://www.linkedin.com/in/hussain-kagdi-70941616a/" target=_blank>LinkedIn</a></td></tr>
 	
 	<tr><td><img src="github.png" alt="Github" style="width:50%;" alt="Sorry, Image not available"></td>
 	<td><a href="https://github.com/HRKagdi" target=_blank>Github</a></td></tr>
