--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="topnav">
-   <a href="homePage.html">Home</a>
+   <a href="index.html">Home</a>
   <a class="active" href="contact.html">Contact</a>
   <a href="education.html">Education</a>
   <a href="Information.html">Information</a>
