--- a/html/Information.html
+++ b/html/Information.html
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY>
 <div class="topnav">
-   <a href="homePage.html">Home</a>
+   <a href="index.html">Home</a>
   <a href="contact.html">Contact</a>
   <a href="education.html">Education</a>
   <a class="active" href="Information.html">Information</a>
