--- a/html/education.html
+++ b/html/education.html
@@ -7,7 +7,7 @@
 
 <body>
 <div class="topnav">
-   <a href="homePage.html">Home</a>
+   <a href="index.html">Home</a>
   <a href="contact.html">Contact</a>
   <a class="active" href="education.html">Education</a>
   <a  href="Information.html">Information</a>
