--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,9 @@
 <title>Husen Profile Page</title>
 <link rel="stylesheet" href="../styles/homePage.css" type="text/css">
 <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
+   <script>
+      windows.history.pushState('new','title','contact.html');
+   </script>
 </head>
 <body class="body">
 <div class="topnav">
