--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="../styles/homePage.css" type="text/css">
 <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
    <script>
-      windows.history.pushState('new','title','contact.html');
+      window.history.pushState('new','title','contact.html');
    </script>
 </head>
 <body class="body">
