--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,10 @@
 <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
    <script>
       window.history.pushState('new','title','contact.html');
+      window.history.pushState('new','title','education.html');
+      window.history.pushState('new','title','information.html');
+      window.history.pushState('new','title','videos.html');
+
    </script>
 </head>
 <body class="body">
