--- a/html/education.html
+++ b/html/education.html
@@ -3,6 +3,14 @@
 <title>Education</title>
 <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
 <link rel="stylesheet" href="../styles/education.css" type="text/css">
+    <script>
+       window.history.pushState('new','title','index.html');
+      window.history.pushState('new','title','contact.html');
+      window.history.pushState('new','title','education.html');
+      window.history.pushState('new','title','information.html');
+      window.history.pushState('new','title','videos.html');
+
+   </script>
 </head>
 
 <body>
