--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,7 @@
       window.history.pushState('new','title','index.html');
       window.history.pushState('new','title','contact.html');
       window.history.pushState('new','title','education.html');
-      window.history.pushState('new','title','information.html');
+      window.history.pushState('new','title','Information.html');
       window.history.pushState('new','title','videos.html');
 
    </script>
