--- a/html/index.html
+++ b/html/index.html
@@ -12,10 +12,10 @@
 <body class="body">
 <div class="topnav">
    <button onclick="changeurl('index.html')"><a class="active" href="index.html">Home</a></button>
-  <button onclick="changeurl('contact.html')"><a href="contact.html">Contact</a>/button>
-  <button onclick="changeurl('education.html')"><a href="education.html">Education</a>/button>
-  <button onclick="changeurl('Information.html')"><a  href="Information.html">Information</a>/button>
-   <button onclick="changeurl('videos.html')"><a href="videos.html">GATE Videos</a>/button>
+  <button onclick="changeurl('contact.html')"><a href="contact.html">Contact</a></button>
+  <button onclick="changeurl('education.html')"><a href="education.html">Education</a></button>
+  <button onclick="changeurl('Information.html')"><a  href="Information.html">Information</a></button>
+   <button onclick="changeurl('videos.html')"><a href="videos.html">GATE Videos</a></button>
 </div> 
 <br><br><br>
 <div class="myDiv"><p>
