--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
   <script>
       function changeurl(url){
-         history.pushState(null,'',url);
+         history.pushState('new','title',url);
       }
    </script>
 </head>
