--- a/html/index.html
+++ b/html/index.html
@@ -11,11 +11,11 @@
 </head>
 <body class="body">
 <div class="topnav">
-   <button onclick="changeurl('index.html')"><a class="active" href="index.html">Home</a></button>
-  <button onclick="changeurl('contact.html')"><a href="contact.html">Contact</a></button>
-  <button onclick="changeurl('education.html')"><a href="education.html">Education</a></button>
-  <button onclick="changeurl('Information.html')"><a  href="Information.html">Information</a></button>
-   <button onclick="changeurl('videos.html')"><a href="videos.html">GATE Videos</a></button>
+   <button onclick="changeurl('index.html')">Home</button>
+  <button onclick="changeurl('contact.html')">Contact</button>
+  <button onclick="changeurl('education.html')">Education</button>
+  <button onclick="changeurl('Information.html')">Information</button>
+   <button onclick="changeurl('videos.html')">GATE Videos</button>
 </div> 
 <br><br><br>
 <div class="myDiv"><p>
