--- a/html/temp.html
+++ b/html/temp.html
@@ -4,33 +4,62 @@
 <link rel="stylesheet" href="../styles/homePage.css" type="text/css">
 <link rel="icon" sizes="72x72" href="IIITH.jpeg" >
 <script>
-function myFunction() {
-  var x = document.getElementById("myDIV");
+function myFunction1() {
+  var x = document.getElementById("myDIV1");
   if (x.style.display === "none") {
     x.style.display = "block";
   } else {
     x.style.display = "none";
   }
+function myFunction2() {
+  var x = document.getElementById("myDIV2");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+function myFunction3() {
+  var x = document.getElementById("myDIV3");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+function myFunction4() {
+  var x = document.getElementById("myDIV4");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+function myFunction5() {
+  var x = document.getElementById("myDIV5");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+	
 }
 </script>
 </head>
 <body class="body">
 <div class="topnav">
-   <button onclick="myFunction()">Home</button>
-  <button onclick="myFunction()">Contact</button>
-  <button onclick="myFunction()">Education</button>
-  <button onclick="myFunction()">Information</button>
-   <button onclick="myFunction()">GATE Videos</button>
+   <button onclick="myFunction1()">Home</button>
+  <button onclick="myFunction2()">Contact</button>
+  <button onclick="myFunction3()">Education</button>
+  <button onclick="myFunction4()">Information</button>
+   <button onclick="myFunction5()">GATE Videos</button>
 </div> 
 <br><br><br>
-<div class="index">
+<div class="myDiv1">
 <div class="myDiv"><p>
 Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at <b><u>International Institute of Information technology, Hyderabad</u></b>. My interests include <b>Machine Learning, Competitive Programming and Blockchain</b>. I am currently learning Mern Stack Developement in depth. I aspire to become a <b>software developer</b> one day. I want to work in a good product based company.
 </p></div><br><br><br> <br>
 <image class="image1" src="../html/HRKImage.jpeg" alt="Sorry, Image not available"></image><br><br>
 <a href="Husen_CV.pdf" target=_blank>Visit my Resume</a>
 </div>
-<div>
+<div class="myDiv2">
 <table>
 	<tr><td><img src="codechef.jpg" alt="Codechef" style="width:50%;" alt="Sorry, Image not available"></td>
 	<td><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</a></td></tr>
@@ -51,7 +80,7 @@ Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at 
 	<td><a href="https://github.com/HRKagdi" target=_blank>Github</a></td></tr>
 </table>	
 </div>
-<div>
+<div class="myDiv3">
 <p> These are my education details.</p>
 <div id="school">
 <div id="school_image"></div>
@@ -67,7 +96,7 @@ Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at 
 <div id="IIITH_info">I am currently pusuing my post graduation from the International Institute of Information Technology, Hyderabad.I am doing my majors in Computer Science and Engineering. We have a huge talent pool of teachers and friends. It is one of the best school to study Computer Science in India. The university majorly focuses on Research in Artificial Intelligence and cutting edge technologies. We have a excellent coding culture here.<a href="https://iiit.ac.in/" target=_blank>Visit IIITH</a>. </div>
 </div> 
 </div>
-<div>
+<div class="myDiv4">
 <br>
 <image src="IIITH.jpeg"> 
 <table class="table">
@@ -146,7 +175,7 @@ Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at 
 </tr>
 </table>
 </div>
-<div>
+<div class="myDiv5"">
 <p>This is the GATE 2019 Pointers based question</p>
 <video width="240" height="320" controls><source src="GATE 2019 Pointers Question.mp4" type="video/mp4"></video>
 </DIV>
