--- a/html/temp.html
+++ b/html/temp.html
@@ -52,14 +52,14 @@ function myFunction5() {
    <button onclick="myFunction5()">GATE Videos</button>
 </div> 
 <br><br><br>
-<div class="myDiv1">
+<div class="myDIV1">
 <div class="myDiv"><p>
 Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at <b><u>International Institute of Information technology, Hyderabad</u></b>. My interests include <b>Machine Learning, Competitive Programming and Blockchain</b>. I am currently learning Mern Stack Developement in depth. I aspire to become a <b>software developer</b> one day. I want to work in a good product based company.
 </p></div><br><br><br> <br>
 <image class="image1" src="../html/HRKImage.jpeg" alt="Sorry, Image not available"></image><br><br>
 <a href="Husen_CV.pdf" target=_blank>Visit my Resume</a>
 </div>
-<div class="myDiv2">
+<div class="myDIV2">
 <table>
 	<tr><td><img src="codechef.jpg" alt="Codechef" style="width:50%;" alt="Sorry, Image not available"></td>
 	<td><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</a></td></tr>
@@ -80,7 +80,7 @@ Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at 
 	<td><a href="https://github.com/HRKagdi" target=_blank>Github</a></td></tr>
 </table>	
 </div>
-<div class="myDiv3">
+<div class="myDIV3">
 <p> These are my education details.</p>
 <div id="school">
 <div id="school_image"></div>
@@ -175,7 +175,7 @@ Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at 
 </tr>
 </table>
 </div>
-<div class="myDiv5"">
+<div class="myDIV5"">
 <p>This is the GATE 2019 Pointers based question</p>
 <video width="240" height="320" controls><source src="GATE 2019 Pointers Question.mp4" type="video/mp4"></video>
 </DIV>
