--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,11 @@
 </head>
 <body class="body">
 <div class="topnav">
-   <button onclick="changeurl('/index.html')">Home</button>
-  <button onclick="changeurl('/contact.html')">Contact</button>
-  <button onclick="changeurl('/education.html')">Education</button>
-  <button onclick="changeurl('/Information.html')">Information</button>
-   <button onclick="changeurl('/videos.html')">GATE Videos</button>
+   <a class="active" href="index.html">Home</a>
+  <a href="contact.html">Contact</a>
+  <a  href="education.html">Education</a>
+  <a  href="Information.html">Information</a>
+   <a href="videos.html">GATE Videos</a>
 </div> 
 <br><br><br>
 <div class="myDiv"><p>
