--- a/html/contact.html
+++ b/html/contact.html
@@ -15,22 +15,22 @@
 </div>
 <table>
 	<tr><td><img src="codechef.jpg" alt="Codechef" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><a href="https://www.codechef.com/users/hrk777" target=_blank>Codechef</a></td></tr>
+	<td><a href="https://www.codechef.com/users/hrk777" target=_blank><H1>Codechef</H1></a></td></tr>
 	
 	<tr><td><img src="leetcode.png" alt="Leetcode" style="width:50%;" alt="Sorry, Image not available"></li></td>
-	<td><a href="https://leetcode.com/2021201077_husen/" target=_blank>Leetcode</a><td></tr>
+	<td><a href="https://leetcode.com/2021201077_husen/" target=_blank><H1>Leetcode</H1></a><td></tr>
 	
 	<tr><td><img src="codeforces.jpg" alt="Codeforces" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><a href="https://codeforces.com/profile/Hussain777" target=_blank>Codeforces</a></td></tr>
+	<td><a href="https://codeforces.com/profile/Hussain777" target=_blank><H1>Codeforces</H1></a></td></tr>
 	
 	<tr><td><img src="atcoder.png" alt="Atcoder" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><a href="https://atcoder.jp/users/hrk777" target=_blank>Atcoder</a></td></tr>
+		<td><a href="https://atcoder.jp/users/hrk777" target=_blank><H1>Atcoder</H1></a></td></tr>
 	
 	<tr><td><img src="Linkedin-Logo.png" alt="LinkedIn" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><a href="https://www.linkedin.com/in/hussain-kagdi-70941616a/" target=_blank>LinkedIn</a></td></tr>
+		<td><a href="https://www.linkedin.com/in/hussain-kagdi-70941616a/" target=_blank><H1>LinkedIn</H1></a></td></tr>
 	
 	<tr><td><img src="github.png" alt="Github" style="width:50%;" alt="Sorry, Image not available"></td>
-	<td><a href="https://github.com/HRKagdi" target=_blank>Github</a></td></tr>
+	<td><a href="https://github.com/HRKagdi" target=_blank><H1>Github</H1></a></td></tr>
 </table>	
 
 </body>
