--- a/html/contact.html
+++ b/html/contact.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 <div class="topnav">
-   <a href="index.html">Home</a>
-  <a class="active" href="contact.html">Contact</a>
-  <a href="education.html">Education</a>
-  <a href="Information.html">Information</a>
-   <a href="videos.html">GATE Videos</a>
+   <a href="index.html" data-link>Home</a>
+  <a class="active" href="contact.html" data-link>Contact</a>
+  <a href="education.html" data-link>Education</a>
+  <a href="Information.html" data-link>Information</a>
+   <a href="videos.html" data-link>GATE Videos</a>
 </div>
 <table>
 	<tr><td><img src="codechef.jpg" alt="Codechef" style="width:50%;" alt="Sorry, Image not available"></td>
