--- a/html/videos.html
+++ b/html/videos.html
@@ -15,15 +15,15 @@
    <a class="active" href="videos.html">GATE Videos</a>
 </div> 
 <DIV>
-<p>This is the GATE 2019 Pointers based question</p>
+  <p><h1>This is the GATE 2019 Pointers based question</h1></p>
 <video width="240" height="320" controls><source src="GATE 2019 Pointers Question.mp4" type="video/mp4"></video>
 </DIV>
   <DIV>
-<p>This is the GATE 2019 C programming based Question</p>
+<p><h1>This is the GATE 2019 C programming based Question</h1></p>
 <video width="240" height="320" controls><source src="GATE 2019 C Programming Question.mp4" type="video/mp4"></video>
 </DIV>
   <DIV>
-<p>This is the GATE 2019 C limits based Question</p>
+    <p><h1>This is the GATE 2019 C limits based Question</h1></p>
 <video width="240" height="320" controls><source src="GATE 2019 Limits Question(1).mp4" type="video/mp4"></video>
 </DIV>
 </BODY>
