--- a/html/homePage.html
+++ b/html/homePage.html
@@ -13,7 +13,7 @@
    }
 </script>
 </head>
-<body class="body">
+<body>
 <div class="topnav">
    <button class="active" onclick="toggle('homeDiv')">Home</button>
    <button onclick="toggle('contactDiv')">Contact</button>
