--- a/html/homePage.html
+++ b/html/homePage.html
@@ -23,7 +23,7 @@
 </div> 
 <br><br><br>
 <div id="homeDiv">
-<div id="myDiv"><p>
+<div><p>
 Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at <b><u>International Institute of Information technology, Hyderabad</u></b>. My interests include <b>Machine Learning, Competitive Programming and Blockchain</b>. I am currently learning Mern Stack Developement in depth. I aspire to become a <b>software developer</b> one day. I want to work in a good product based company.
 </p></div><br><br><br> <br>
 <image class="image1" src="../html/HRKImage.jpeg" alt="Sorry, Image not available"></image><br><br>
