--- a/html/homePage.html
+++ b/html/homePage.html
@@ -14,6 +14,7 @@
 </script>
 </head>
 <body>
+   <body class="homeDiv">
 <div class="topnav">
    <button class="active" onclick="toggle('homeDiv')">Home</button>
    <button onclick="toggle('contactDiv')">Contact</button>
@@ -28,7 +29,7 @@ Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at 
 </p></div><br><br><br> <br>
 <image class="image1" src="../html/HRKImage.jpeg" alt="Sorry, Image not available"></image><br><br>
 <a href="Husen_CV.pdf" target=_blank>Visit my Resume</a>
-</div>
+      </div></body>
 <div id="contactDiv" class="hidden" >
    <head>
    <title>Contact</title>
