--- a/html/homePage.html
+++ b/html/homePage.html
@@ -14,7 +14,7 @@
 </script>
 </head>
 <body>
-   
+   <div class="myDiv">
 <div class="topnav">
    <button class="active" onclick="toggle('homeDiv')">Home</button>
    <button onclick="toggle('contactDiv')">Contact</button>
@@ -23,13 +23,13 @@
    <button onclick="toggle('videosDiv')">GATE Videos</button>
 </div> 
 <br><br><br>
-<div class="homeDiv">
+   <div>
 <div><p>
 Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at <b><u>International Institute of Information technology, Hyderabad</u></b>. My interests include <b>Machine Learning, Competitive Programming and Blockchain</b>. I am currently learning Mern Stack Developement in depth. I aspire to become a <b>software developer</b> one day. I want to work in a good product based company.
 </p></div><br><br><br> <br>
 <image class="image1" src="../html/HRKImage.jpeg" alt="Sorry, Image not available"></image><br><br>
 <a href="Husen_CV.pdf" target=_blank>Visit my Resume</a>
-      </div>
+      </div></div>
 <div id="contactDiv" class="hidden" >
    <head>
    <title>Contact</title>
