--- a/html/homePage.html
+++ b/html/homePage.html
@@ -13,7 +13,7 @@
    }
 </script>
 </head>
-<body class="homeDiv">
+<body class="body">
 <div class="topnav">
    <button class="active" onclick="toggle('homeDiv')">Home</button>
    <button onclick="toggle('contactDiv')">Contact</button>
@@ -22,8 +22,8 @@
    <button onclick="toggle('videosDiv')">GATE Videos</button>
 </div> 
 <br><br><br>
-<div>
-<div class="myDiv"><p>
+<div id="homeDiv">
+<div><p>
 Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at <b><u>International Institute of Information technology, Hyderabad</u></b>. My interests include <b>Machine Learning, Competitive Programming and Blockchain</b>. I am currently learning Mern Stack Developement in depth. I aspire to become a <b>software developer</b> one day. I want to work in a good product based company.
 </p></div><br><br><br> <br>
 <image class="image1" src="../html/HRKImage.jpeg" alt="Sorry, Image not available"></image><br><br>
