--- a/html/homePage.html
+++ b/html/homePage.html
@@ -22,7 +22,7 @@
    <button onclick="toggle('videosDiv')">GATE Videos</button>
 </div> 
 <br><br><br>
-<div id="homeDiv">
+<div class="homeDiv">
 <div class="myDiv"><p>
 Hello, Welcome to the professional page of Husen Kagdi. I am a Mtech student at <b><u>International Institute of Information technology, Hyderabad</u></b>. My interests include <b>Machine Learning, Competitive Programming and Blockchain</b>. I am currently learning Mern Stack Developement in depth. I aspire to become a <b>software developer</b> one day. I want to work in a good product based company.
 </p></div><br><br><br> <br>
